--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,16 +1,109 @@
-body{
-    background-color: azure;
-    font-family: 'JetBrains Mono';
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    padding: 15px;
+    background: rgb(1,0,9);
+background: linear-gradient(31deg, rgba(1,0,9,1) 0%, rgba(3,2,54,1) 25%, rgba(4,3,64,1) 33%,
+                             rgba(9,9,121,1) 56%, rgba(6,84,170,1) 73%, rgba(5,116,191,1) 83%);
+    overflow: hidden;
 }
 #message-box{
     background-color: darkred;
     border: 3px solid rgb(189, 76, 76);
+    align-items: center;
     border-radius: 2px;
     color: white;
     margin-top: 20px;
     display: none;
+    font-weight: 500;
 }
 #message-box p{
+    align-items: center;
     margin: 10px;
     padding: 0;
+}
+
+.wrapper {
+    max-width: 500px;
+    width: 100%;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.1);
+  }
+.wrapper .title {
+    height: 120px;
+    background: #007991;
+    border-radius: 5px 5px 0 0;
+    color: #fff;
+    font-size: 50px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.wrapper form {
+    padding: 25px 35px 25px;
+}
+.wrapper form .row {
+    height: 60px;
+    margin-top: 15px;
+    position: relative;
+}
+.wrapper form .row input {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    padding-left: 70px;
+    border-radius: 5px;
+    border: 1px solid lightgrey;
+    font-size: 18px;
+    transition: all 0.3s ease;
+}
+form .row input:focus {
+    border-color: #007991;
+}
+form .row input::placeholder {
+    color: #999;
+}
+.wrapper form .row i {
+    position: absolute;
+    width: 55px;
+    height: 100%;
+    color: #fff;
+    font-size: 22px;
+    background: #007991;
+    border: 1px solid #007991;
+    border-radius: 5px 0 0 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.wrapper form .pass {
+    margin-top: 12px;
+}
+.wrapper form .button button {
+    margin-top: 20px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding-left: 0px;
+    background: #007991;
+    cursor: pointer;
+    height: 100%;
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+form .button button:hover {
+    background: #005591;
 }
