--- a/public/view/login.html
+++ b/public/view/login.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>PUC BET</title>
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 <body>
@@ -28,7 +28,7 @@
         
         <div class="pass">
           <div class="row button">
-            <button type="button" value="Login" onclick="signIn()">
+            <button type="button" id="btnSignIn" onclick="signIn()">
               <p>Sign In</p>  
             </button>
           </div>
@@ -40,6 +40,6 @@
 
       </form>
     </div>  
-    <script src="./js/login.js" async defer></script>
+    <script src="../js/login.js" async defer></script>
   </body>
 </html>
