--- a/public/view/signup.html
+++ b/public/view/signup.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>PUC BET</title>
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 <body>
