--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,6 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Manrope:wght@200..800&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Modak&display=swap');
 :root {
+  --tawny: #cc5d28;
+  --seal-brown: #6c2d1b;
+  --saffron: #f7c846;
+  --french-gray: #d2d7df;
+  --gold-metalic: #c8ad55;
+  --smoky-black: #100704;
+
   --lapis-azuli: #05668d;
   --teal: #028090;
   --persian-green: #00a896;
@@ -13,7 +20,7 @@
   --border-color: #444;
   --background-color: rgba(43, 43, 43, 0.95);
   --font-title: "Modak", sans-serif;
-  --font-text: 
+  --font-text: "Kanit", sans-serif;
 }
 
 * {
@@ -23,30 +30,37 @@
 }
 
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
-  padding: 15px;
-  background: var(--cream);
+  background: radial-gradient(circle, rgba(255, 255, 255, 0.2) 0%, 
+                            rgba(255, 255, 255, 0) 70%), 
+                            linear-gradient(135deg, #6C2C1B, #F1C04D, #D1622B);
+  background-blend-mode: overlay;
   color: var(--font-color);
   overflow: hidden;
+}
+/* COLOCAR NA DIV PAI */
+.container-login{
+  display: flex;
+  justify-content: center; /* Horizontal centering */
+  align-items: center;     /* Vertical centering */
+  height: 100vh;           /* Full viewport height to center vertically */
 }
 
 .wrapper {
   max-width: 500px;
   width: 100%;
+
   background: var(--background-color);
   border-radius: 8px;
+
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.7);
   border: 2px solid var(--lapis-azuli);
 }
 
-.wrapper .title {
+.title {
   height: 100px;
   font-size: 48px;
-  background-color: var(--lapis-azuli);
-  color: var(--font-color);
+  color: var(--smoky-black);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -66,6 +80,7 @@ body {
 .wrapper form .row input {
   height: 100%;
   width: 100%;
+
   padding-left: 60px;
   border-radius: 5px;
   background-color: var(--input-bg);
