--- a/public/view/login.html
+++ b/public/view/login.html
@@ -3,43 +3,42 @@
 <html>
   <head>
     <title>PUC BET</title>
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
-<body>
-    <div class="wrapper">
-      <!--CABEÇALHO-->
-      <div class="title">
-        <span>PUC BET</span>
-      </div>
+<body >
+    <div class="container-login">
+      <div class="wrapper">
+        <div class="title">
+          <span>PUC BET</span>
+        </div>
 
-      <form>
-        <div class="row">
-          <!-- <label for="fEmail">Email:</label><br> -->
-          <i class="fas fa-user"></i>
-          <input type="text" id="fEmail" onfocus="hideMessage()" placeholder="Email" required>
-        </div>
-        
-        <div class="row">
-          <!-- <label for="fPassword">Password:</label><br> -->
-          <i class="fas fa-lock"></i>
-          <input type="password" id="fPassword" onfocus="hideMessage()" placeholder="Password" required>
-        </div>
-        
-        <div class="pass">
-          <div class="row button">
-            <button type="button" id="btnSignIn" onclick="signIn()">
-              <p>Sign In</p>  
-            </button>
+        <form>
+          <div class="row">
+            <i class="fas fa-user"></i>
+            <input type="text" id="fEmail" onfocus="hideMessage()" placeholder="Email" required>
           </div>
-        </div>
-        
-        <div id="message-box">
-          <p id="message"></p>
-        </div>
+          
+          <div class="row">
+            <i class="fas fa-lock"></i>
+            <input type="password" id="fPassword" onfocus="hideMessage()" placeholder="Password" required>
+          </div>
+          
+          <div class="pass">
+            <div class="row button">
+              <button type="button" id="btnSignIn" onclick="signIn()">
+                <p>Sign In</p>  
+              </button>
+            </div>
+          </div>
+  
+          <div id="message-box">
+            <p id="message"></p>
+          </div>
+        </form>
 
-      </form>
-    </div>  
+      </div>  
+    </div>
     <script src="../js/login.js" async defer></script>
   </body>
-</html>
+  </html>
