--- a/public/view/signup.html
+++ b/public/view/signup.html
@@ -4,49 +4,62 @@
   <head>
     <title>PUC BET</title>
     <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../login-page/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
-</head>
-<body>
+  </head>
+  <body>
     <div class="container-login">
-
-      <div class="wrapper">
-        <!--CABEÇALHO-->
-          <div class="title">
-            <span>PUC BET</span>
-          </div>
-      <!-- colocar os dados: Name/email/password/birthdate -->
-      <!-- Inicio do formulário de cadastro - FORM 1 -->
-      <form>
-          <div class="row">
-            <i class="fas fa-user"></i>
-              <input type="text" id="fName" onfocus="hideMessage()" placeholder="Name" required>
-          </div>
-          <div class="row">
-              <i class="fas fa-envelope"></i>
-              <input type="text" id="fEmail" onfocus="hideMessage()" placeholder="Email" required>
-            </div>
-          <div class="row">
-            <i class="fas fa-lock"></i>
-            <input type="password" id="fPassword" onfocus="hideMessage()" placeholder="Password" required>
-          </div>
-          <div class="row">
-              <i class="fas fa-calendar-days"></i>
-              <input type="date" id="fBirthdate" onfocus="hideMessage()" placeholder="Birthdate" required>
-          </div>
-          <div class="pass">
-              <div class="row button">
-                <button type="button" id="btnSignUp" onclick="signUp()">
-                  <p>Sign Up</p>  
-                </button>
-              </div>
-            </div>
-          <div id="message-box">
-            <p id="message"></p>
-          </div>
-          <!--Fazer tratamento de dados e voltar botões: usuário cadastrado / Conta já existente-->
-        </form> <!-- Fim do formulário - FORM 1 -->
+      <div class="title">
+        <span>
+            PUC BET
+        </span>
       </div>
+
+      <form class="form">
+        <div class="flex-column">
+          <label>Name</label>
+        </div>
+
+        <div class="inputForm">
+            
+            <input type="text" id="fName" onfocus="hideMessage()" placeholder="Name" required>
+        </div>
+
+        <div class="flex-column">
+          <label>Email</label>
+        </div>
+
+        <div class="inputForm">
+          
+          <input type="text" id="fEmail" onfocus="hideMessage()" placeholder="Email" required>
+        </div>
+
+        <div class="flex-column">
+          <label>Password</label>
+        </div>
+
+        <div class="inputForm">
+          
+          <input type="password" id="fPassword" onfocus="hideMessage()" placeholder="Password" required>
+        </div>
+
+        <div class="flex-column">
+          <label>Birthdate</label>
+        </div>
+
+        <div class="inputForm">
+          
+          <input type="date" id="fBirthdate" onfocus="hideMessage()" placeholder="Birthdate" required>
+        </div>
+          
+        <button type="button" class="button-submit"  id="btnSignIn" onclick="signUp()">Sign In</button>
+          
+        <div id="message-box">
+            <p id="message"></p>
+        </div>
+          <!--Fazer tratamento de dados e voltar botões: usuário cadastrado / Conta já existente-->
+      </form> <!-- Fim do formulário - FORM 1 -->
     </div>
     <script src="../js/login.js" async defer></script>
-</body>
+  </body>
 </html>
