--- a/public/view/home.html
+++ b/public/view/home.html
@@ -1,76 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
+<link rel="stylesheet" href="../styles/home.css">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>PUC BET</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://kit.fontawesome.com/66b8c02613.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="../styles/styles.css">
-        <link rel="stylesheet" href="../styles/carousel.css">
-        <link rel="stylesheet" href="../styles/navBar.css">
-    </head>
-    <body>
-        <nav class="navbar">
-            <div class="navbar-left">
-                <a href="#" class="brand">PUC Bet</a>
-            </div>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>PUC BET</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
 
-            <!-- Search Bar -->
-            <!-- <div class="navbar-center">
-                <input type="text" class="search-bar" placeholder="Search...">
-            </div> -->
 
-            <div class="navbar-right">
-                
-                <div class="link-config">
-                    <a href="#">
-                        <i class="fa-solid fa-wallet"></i>
-                        My Wallet
-                    </a>
-                </div>
-
-                <div class="link-config">
-                    <a href="#">
-                        <i class="fa-solid fa-money-bill"></i>
-                        My Bets
-                    </a>
-                </div>
-
-                <div class="link-config">
-                    <div class="dropdown">
-                        <a href="#" class="dropbtn">
-                            <i class="fa-solid fa-caret-down"></i>
-                            Events
-                        </a>
-                        <div class="dropdown-content">
-                            <a href="#">Upcoming Events</a>
-                            <a href="#">Past Events</a>
-                            <a href="#">Popular Events</a>
-                            <a href="#">All Events</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
-
-        <div class="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="image1.jpg" alt="Image 1">
-                </div>
-                <div class="carousel-item">
-                    <img src="image2.jpg" alt="Image 2">
-                </div>
-                <div class="carousel-item">
-                    <img src="image3.jpg" alt="Image 3">
-                </div>
-            </div>
-            <button class="carousel-control prev" onclick="moveSlide(-1)">❮</button>
-            <button class="carousel-control next" onclick="moveSlide(1)">❯</button>
-        </div>
-        
-        <script src="../js/carousel.js"></script>
-    </body>
-</html>
+  <body>
+    <div class="container-xxlarge">
+        <h1 class="titleHomepage">Discover how<br><span class="ganhar-dinheiro">to make money</span><br>watching your<br>sports!</h1>
+        <p class="descriptionHomepage">Join our betting platform today and start profiting<br>from your trading skills. Bet smarter and<br>earn more in real-time!</p>
+    </div>
+    <div class="container-xxlarge2">
+    </div>
