FIX: shareEventsFunds goes directly to balance

--- a/public/view/home.html
+++ b/public/view/home.html
@@ -13,39 +13,44 @@
   </head>
 
   <body>
-    <div class="container-xxlarge">
-        <div class="logoPucBet">
-            <img src="/assets/logoPucBet.png" alt="Logo" class="logoPucBet">
+        <div class="container-xxlarge">
+            <div class="logoPucBet">
+                <img src="../assets/logoPucBet.png" alt="Logo" class="logoPucBet">
+            </div>
+            <div class="header-content">
+                <h1 class="titleHomepage">
+                    Discover how to <span class="ganhar-dinheiro">make money</span><br> watching your sports!
+                </h1>
+                <div class="header-image-container">
+                    <img src="../assets/large-crowd-people-cheering-stadium-with-word-it_662214-75466.PNG" alt="Image" class="header-image">
+                </div>
+            </div>
+            <p class="descriptionHomepage">Join our betting platform today and start profiting<br>from your trading skills. Bet smarter and earn more<br>in real-time!</p>
+            <a href="./signup.html">
+                <button class="btn-signup">
+                    START BETTING NOW!
+                </button>
+            </a>
         </div>
-        <div class="header-content">
-            <h1 class="titleHomepage">
-                Discover how to <span class="ganhar-dinheiro">make money</span><br> watching your sports!
-            </h1>
-            <div class="header-image-container">
-                <img src="/assets/large-crowd-people-cheering-stadium-with-word-it_662214-75466.PNG" alt="Image" class="header-image">
+
+        <div class="container-xxlarge2">
+            <div class="soccerPlayer">
+                <img src="../assets/yes.png" alt="Logo" class="soccerPlayer">
+            </div>
+            <div class="header-content2">
+                <h1 class="titleHomepage2">Bet on Sports Your Way<br>From Baseball to Cricket,<br><span class="gotyoucovered">We’ve Got You Covered!</span></h1>
+                <p class="descriptionHomepage2">
+                    Our platform offers you the freedom to place bets on a wide range of sports,<br>from the classics like baseball and basketball to cricket. With flexible options and<br>
+                    an easy-to-use interface, you can bet anytime, anywhere, all on your terms.
+                </p>
             </div>
         </div>
-        <p class="descriptionHomepage">Join our betting platform today and start profiting<br>from your trading skills. Bet smarter and earn more<br>in real-time!</p>
-        <button class="btn-signup">START BETTING NOW!</button>
-    </div>
-    
-    <div class="container-xxlarge2">
-        <div class="soccerPlayer">
-            <img src="/assets/yes.png" alt="Logo" class="soccerPlayer">
+
+        <div class="container-xxlarge3">
+            <div class="header-image-container-esports">
+                <img src="../assets/esports.png" alt="Image" class="header-image-esports">
+            </div>
         </div>
-        <div class="header-content2">
-            <h1 class="titleHomepage2">Bet on Sports Your Way<br>From Baseball to Cricket,<br><span class="gotyoucovered">We’ve Got You Covered!</span></h1>
-            <p class="descriptionHomepage2">
-                Our platform offers you the freedom to place bets on a wide range of sports,<br>from the classics like baseball and basketball to cricket. With flexible options and<br>
-                an easy-to-use interface, you can bet anytime, anywhere, all on your terms.
-            </p>
-        </div>
-    </div>
-    <div class="container-xxlarge3">
-        <div class="header-image-container-esports">
-            <img src="/assets/esports.png" alt="Image" class="header-image-esports">
-        </div>
-    </div>
     
   </body>
 </html>
